# cpp_ex4_pandemic_a

./: Board.cpp  Board.hpp  CMakeLists.txt  City.hpp  Dispatcher.cpp  Dispatcher.hpp  FieldDoctor.cpp  FieldDoctor.hpp  GeneSplicer.cpp  GeneSplicer.hpp  Medic.cpp  Medic.hpp  OperationsExpert.cpp  OperationsExpert.hpp  Player.cpp  Player.hpp  Researcher.cpp  Researcher.hpp  Scientist.cpp  Scientist.hpp  Test.cpp  Virologist.cpp  Virologist.hpp
